# chronicles

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: config.md
docs/hooks/: claude-code.md  copilot-cli.md  copilot-vscode.md
docs/superpowers/plans/: 2026-04-09-chronicles-implementation.md  (+3 more)
plugin/: plugin.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: claude-code.json  copilot-cli.json  hooks.json
plugin/scripts/: _common.sh  gold-context.sh  ingest.sh  signals-context.sh  signals-ingest.sh  signals-subagent.sh
specs/: chronicles.md
src/chronicles/: __init__.py  __main__.py  archiver.py  cleaner.py  cli.py  config.py  enricher.py  extractor.py  frontmatter.py  init.py  linter.py  llm_utils.py  models.py  signals_cleaner.py  signals_extractor.py  signals_writer.py  templates.py  writer.py
src/chronicles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: gold.md.j2  record.md.j2  wiki_article.md.j2
tests/: conftest.py  test_archiver.py  test_cleaner.py  test_cli_signals.py  test_config.py  test_init.py  test_integration.py  test_linter.py  test_models.py  test_signals_cleaner.py  test_signals_extractor.py  test_signals_integration.py  test_signals_writer.py  test_templates.py  test_writer.py
tests/fixtures/: claude_code_session.jsonl  copilot_cli_session.jsonl  copilot_vscode_session.json
tests/test_extractors/: test_claude_code.py  test_copilot_cli.py
tests/test_similarity/: test_base.py  test_llm.py  test_tfidf.py
tests/test_sources/: test_claude_code.py  test_copilot_cli.py  test_copilot_vscode.py  test_detect.py
(+21 files in other folders)
